--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
         <section id="home" class="bg-gradient-to-br from-[#f7f6f4] to-[#a6998a] text-[#4f3f33] py-32 md:py-40 text-center mt-16 md:mt-20 w-full">
             <div class="max-w-4xl mx-auto px-4">
-                <h2 class="text-4xl md:text-6xl mb-4 text-[#8a7462] font-bold font-playfair">Bem-vindo a Once Upon a Book</h2>
+                <h2 class="text-4xl md:text-6xl mb-4 text-[#8a7462] font-bold font-playfair">Bem-vindo à Once Upon a Book</h2>
                 <p class="text-lg md:text-xl mb-8 text-[#655548]">Descubra mundos incríveis através da leitura</p>
                 <a href="#books" class="inline-block bg-[#cc9fa4] text-white px-8 py-4 rounded-full font-bold transition-all duration-300 hover:bg-[#a67a80] hover:-translate-y-1 shadow-lg hover:shadow-xl">
                     Ver Catálogo
@@ -103,7 +103,7 @@
                     <button class="bg-[#ede3e5] text-[#8a7462] border-2 border-[#e4d6d8] px-4 md:px-6 py-2 md:py-3 rounded-full cursor-pointer font-medium transition-all duration-300 hover:bg-[#cc9fa4] hover:text-white hover:border-[#cc9fa4] filter-btn" data-category="romance">Romance</button>
                     <button class="bg-[#ede3e5] text-[#8a7462] border-2 border-[#e4d6d8] px-4 md:px-6 py-2 md:py-3 rounded-full cursor-pointer font-medium transition-all duration-300 hover:bg-[#cc9fa4] hover:text-white hover:border-[#cc9fa4] filter-btn" data-category="fantasia">Fantasia</button>
                     <button class="bg-[#ede3e5] text-[#8a7462] border-2 border-[#e4d6d8] px-4 md:px-6 py-2 md:py-3 rounded-full cursor-pointer font-medium transition-all duration-300 hover:bg-[#cc9fa4] hover:text-white hover:border-[#cc9fa4] filter-btn" data-category="misterio">Mistério</button>
-                    <button class="bg-[#ede3e5] text-[#8a7462] border-2 border-[#e4d6d8] px-4 md:px-6 py-2 md:py-3 rounded-full cursor-pointer font-medium transition-all duration-300 hover:bg-[#cc9fa4] hover:text-white hover:border-[#cc9fa4] filter-btn" data-category="biografia">Biografia</button>
+                    <button class="bg-[#ede3e5] text-[#8a7462] border-2 border-[#e4d6d8] px-4 md:px-6 py-2 md:py-3 rounded-full cursor-pointer font-medium transition-all duration-300 hover:bg-[#cc9fa4] hover:text-white hover:border-[#cc9fa4] filter-btn" data-category="ficção">Ficção</button>
                 </div>                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 items-stretch" id="booksGrid">
                 </div>
             </div>
